@@ -7,7 +7,6 @@ import net.fabricmc.fabric.api.transfer.v1.transaction.base.SnapshotParticipant;
 import java.util.ArrayList;
 import java.util.List;
 
-@SuppressWarnings("UnstableApiUsage")
 public abstract class ExecutingInsertionStorage<T> implements InsertionOnlyStorage<T> {
     final DroppedItems droppedItems = new DroppedItems();
 
@@ -45,7 +44,7 @@ public abstract class ExecutingInsertionStorage<T> implements InsertionOnlyStora
             int previousSize = snapshot;
 
             while (entries.size() > previousSize) {
-                entries.remove(entries.size() - 1);
+                entries.removeLast();
             }
         }
 
